{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 23,
  "lineage": "fffd34b9-d655-eaeb-e82f-89e0d9613726",
  "resources": [
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_app_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:004062890432:security-group/sg-0f27cbfc7537e542f",
            "description": "Allowing HTTP requests to the app tier application load balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f27cbfc7537e542f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-app-security-group",
            "name_prefix": "",
            "owner_id": "004062890432",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "dev",
              "project": "oceanix"
            },
            "tags_all": {
              "environment": "dev",
              "project": "oceanix"
            },
            "timeouts": null,
            "vpc_id": "vpc-03308f3b12cf0c361"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:004062890432:security-group/sg-0cfba0a5c26056bfb",
            "description": "Allowing requests to the app servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cfba0a5c26056bfb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f27cbfc7537e542f"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f27cbfc7537e542f"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "app-instance-security-group",
            "name_prefix": "",
            "owner_id": "004062890432",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "dev",
              "project": "oceanix"
            },
            "tags_all": {
              "environment": "dev",
              "project": "oceanix"
            },
            "timeouts": null,
            "vpc_id": "vpc-03308f3b12cf0c361"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.alb_app_http",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:004062890432:security-group/sg-04ccbc797d4bfffbc",
            "description": "RDS mysql server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04ccbc797d4bfffbc",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL access from within VPC",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cfba0a5c26056bfb"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-security-group",
            "name_prefix": "",
            "owner_id": "004062890432",
            "revoke_rules_on_delete": false,
            "tags": {
              "environment": "dev",
              "project": "oceanix"
            },
            "tags_all": {
              "environment": "dev",
              "project": "oceanix"
            },
            "timeouts": null,
            "vpc_id": "vpc-03308f3b12cf0c361"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.alb_app_http",
            "module.security.aws_security_group.app_instance_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:004062890432:internet-gateway/igw-0497cea791815e295",
            "id": "igw-0497cea791815e295",
            "owner_id": "004062890432",
            "tags": {
              "Name": "Internet-Gateway",
              "environment": "dev",
              "project": "oceanix"
            },
            "tags_all": {
              "Name": "Internet-Gateway",
              "environment": "dev",
              "project": "oceanix"
            },
            "vpc_id": "vpc-03308f3b12cf0c361"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_app_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:004062890432:loadbalancer/app/app-alb-lb/0cb6936b139ee10a",
            "arn_suffix": "app/app-alb-lb/0cb6936b139ee10a",
            "dns_name": "app-alb-lb-2130251018.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:004062890432:loadbalancer/app/app-alb-lb/0cb6936b139ee10a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-alb-lb",
            "security_groups": [
              "sg-0f27cbfc7537e542f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-001c5043a85c84fcc"
              },
              {
                "subnet_id": "subnet-03c5aaa013646b7df"
              }
            ],
            "subnets": [
              "subnet-001c5043a85c84fcc",
              "subnet-03c5aaa013646b7df"
            ],
            "tags": {
              "Name": "Application-ALB",
              "environment": "dev",
              "project": "oceanix"
            },
            "tags_all": {
              "Name": "Application-ALB",
              "environment": "dev",
              "project": "oceanix"
            },
            "vpc_id": "vpc-03308f3b12cf0c361",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.security.aws_security_group.alb_app_http",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:004062890432:listener/app/app-alb-lb/0cb6936b139ee10a/ab0a631e34e26b16",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:004062890432:targetgroup/app-target-group/5d5c582c3dc3e3bb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:004062890432:listener/app/app-alb-lb/0cb6936b139ee10a/ab0a631e34e26b16",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:004062890432:loadbalancer/app/app-alb-lb/0cb6936b139ee10a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.alb_app_http",
            "module.vpc.aws_lb.app_app_lb",
            "module.vpc.aws_lb_target_group.app_target_group",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:004062890432:targetgroup/app-target-group/5d5c582c3dc3e3bb",
            "arn_suffix": "targetgroup/app-target-group/5d5c582c3dc3e3bb",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:004062890432:targetgroup/app-target-group/5d5c582c3dc3e3bb",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "app-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03308f3b12cf0c361"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0497cea791815e295",
            "id": "r-rtb-0ab0eb9ca0024fc831080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ab0eb9ca0024fc83",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:004062890432:route-table/rtb-0ab0eb9ca0024fc83",
            "id": "rtb-0ab0eb9ca0024fc83",
            "owner_id": "004062890432",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public-Route-Table",
              "environment": "dev",
              "project": "oceanix"
            },
            "tags_all": {
              "Name": "Public-Route-Table",
              "environment": "dev",
              "project": "oceanix"
            },
            "vpc_id": "vpc-03308f3b12cf0c361"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-055d21486c581a58c",
            "route_table_id": "rtb-0ab0eb9ca0024fc83",
            "subnet_id": "subnet-03c5aaa013646b7df"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1f62b7d09a39792",
            "route_table_id": "rtb-0ab0eb9ca0024fc83",
            "subnet_id": "subnet-001c5043a85c84fcc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:004062890432:subnet/subnet-0ad2b9200e33718c7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.201.0/24",
            "id": "subnet-0ad2b9200e33718c7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "004062890432",
            "tags": {
              "Name": "Database-Subnet",
              "environment": "dev",
              "project": "oceanix"
            },
            "tags_all": {
              "Name": "Database-Subnet",
              "environment": "dev",
              "project": "oceanix"
            },
            "vpc_id": "vpc-03308f3b12cf0c361"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:004062890432:subnet/subnet-033972792fe0d08a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.202.0/24",
            "id": "subnet-033972792fe0d08a3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "004062890432",
            "tags": {
              "Name": "Database-Subnet",
              "environment": "dev",
              "project": "oceanix"
            },
            "tags_all": {
              "Name": "Database-Subnet",
              "environment": "dev",
              "project": "oceanix"
            },
            "vpc_id": "vpc-03308f3b12cf0c361"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:004062890432:subnet/subnet-044fd475e41bffbf1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-044fd475e41bffbf1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "004062890432",
            "tags": {
              "Name": "Private-Subnet",
              "environment": "dev",
              "project": "oceanix"
            },
            "tags_all": {
              "Name": "Private-Subnet",
              "environment": "dev",
              "project": "oceanix"
            },
            "vpc_id": "vpc-03308f3b12cf0c361"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:004062890432:subnet/subnet-03c25209b1c353774",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-03c25209b1c353774",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "004062890432",
            "tags": {
              "Name": "Private-Subnet",
              "environment": "dev",
              "project": "oceanix"
            },
            "tags_all": {
              "Name": "Private-Subnet",
              "environment": "dev",
              "project": "oceanix"
            },
            "vpc_id": "vpc-03308f3b12cf0c361"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:004062890432:subnet/subnet-03c5aaa013646b7df",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-03c5aaa013646b7df",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "004062890432",
            "tags": {
              "Name": "Public-Subnet",
              "environment": "dev",
              "project": "oceanix"
            },
            "tags_all": {
              "Name": "Public-Subnet",
              "environment": "dev",
              "project": "oceanix"
            },
            "vpc_id": "vpc-03308f3b12cf0c361"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:004062890432:subnet/subnet-001c5043a85c84fcc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-001c5043a85c84fcc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "004062890432",
            "tags": {
              "Name": "Public-Subnet",
              "environment": "dev",
              "project": "oceanix"
            },
            "tags_all": {
              "Name": "Public-Subnet",
              "environment": "dev",
              "project": "oceanix"
            },
            "vpc_id": "vpc-03308f3b12cf0c361"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:004062890432:vpc/vpc-03308f3b12cf0c361",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0827cc2fe3be8e98b",
            "default_route_table_id": "rtb-0ed7bdf6dbb906896",
            "default_security_group_id": "sg-0d537ab6ebd6dcf69",
            "dhcp_options_id": "dopt-107d636a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03308f3b12cf0c361",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0ed7bdf6dbb906896",
            "owner_id": "004062890432",
            "tags": {
              "Name": "VPC",
              "environment": "dev",
              "project": "oceanix"
            },
            "tags_all": {
              "Name": "VPC",
              "environment": "dev",
              "project": "oceanix"
            }
          }
        }
      ]
    }
  ]
}